--- a/static/confirm.html
+++ b/static/confirm.html
@@ -31,64 +31,47 @@
     </style>
   </head>
   <body>
-    <button id="fei">登录feifei账号</button>
-    <button id="qi">登录qiqi账号</button>
-
     <div id="info">是否确认登录会议综合管理系统？</div>
     <button id="confirm">确认登录</button>
     <button id="cancel">取消</button>
-
     <script>
+      const axionInstance = axios.create({
+        baseURL: 'https://116.204.21.112/end',
+      });
       const params = new URLSearchParams(window.location.search.slice(1));
       const id = params.get('id');
-      axios.get('http://192.168.3.136:3000/qrcode/scan?id=' + id).catch((e) => {
+      axionInstance.get('/qrcode/scan?id=' + id).catch((e) => {
         alert('二维码已过期');
       });
 
       let token = '';
 
-      document.getElementById('fei').addEventListener('click', () => {
-        axios
-          .get('http://192.168.3.136:3000/login', {
-            params: {
-              username: 'feifei',
-              password: '123',
-            },
-          })
-          .then((res) => {
-            token = res.data;
-          });
-      });
-
-      document.getElementById('qi').addEventListener('click', () => {
-        axios
-          .get('http://192.168.31.56:3000/login', {
-            params: {
-              username: 'qiqi',
-              password: '456',
-            },
-          })
-          .then((res) => {
-            token = res.data;
-          });
-      });
-
       document.getElementById('confirm').addEventListener('click', () => {
-        console.log(token);
-        axios
-          .get('http://192.168.3.136:3000/qrcode/confirm?id=' + id, {
-            headers: {
-              authorization: 'Bearer ' + token,
-            },
-          })
-          .catch((e) => {
-            alert('二维码已过期');
+          axionInstance
+          .post('/user/login', {
+              username: 'weiyafei',
+              password: '123456',
+            })
+          .then((res) => {
+            console.log(res)
+            token = res.data.data.accessToken;
+            userid = res.data.data.userInfo.id;
+            axionInstance
+            .get(`/qrcode/confirm?id=${id}&userId=${userid}`, {
+              headers: {
+                authorization: 'Bearer ' + token,
+              },
+            })
+            .catch((e) => {
+              alert('二维码已过期');
+            });
           });
+        
       });
 
       document.getElementById('cancel').addEventListener('click', () => {
-        axios
-          .get('http://192.168.3.136:3000/qrcode/cancel?id=' + id)
+        axionInstance
+          .get('/qrcode/cancel?id=' + id)
           .catch((e) => {
             alert('二维码已过期');
           });
